# fieldflow

./: README.md  mkdocs.yml  pyproject.toml  sample_config.toml
.github/workflows/: docs.yml  lint.yml  test.yml
docs/: USAGE.md  index.md
old_code/: prototype_train_clean.ipynb
src/fieldflow/: __init__.py  __main__.py  config.py  dataloader.py  model.py  posrec.py  train.py  utils.py
tests/: test_utils.py
