[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fieldflow"
version = "0.1.0"
description = "JAX-based normalizing flows for physical field modeling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ivy Li"},
    {name = "Juehang Qin"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "jaxtyping>=0.2.20",
    "jaxopt>=0.8.0",
    "equinox>=0.11.0",
    "optax>=0.1.4",
    "diffrax>=0.3.0",
    
    # FlowJAX for normalizing flows
    "flowjax>=12.0.0",
    
    # Data processing
    "numpy>=1.23.0",
    "h5py>=3.7.0",
    
    # Configuration
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/RiceAstroparticleLab/fieldflow"
"Bug Tracker" = "https://github.com/RiceAstroparticleLab/fieldflow/issues"

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["old_code"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I",  # isort
    "ASYNC", # flake8-async
    "S",  # flake8-bandit
    "ARG", # flake8-unused-arguments
    "Q",  # flake8-quotes
    "SIM", # flake8-simplify
    "NPY", # numpy-specific rules
    "PD",  # pandas-specific rules
    "N",  # pep8-naming
    "W",  # warning
    "PLC", # pylint convention
    "PLE", # pylint error
    "PLW", # pylint warning
    "RUF", # ruff-specific rules
]
ignore = ["COM812"]  # Ignore trailing comma rule that conflicts with formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Allow assert statements in tests

# Enable Ruff's formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
